# kaccounts-providers

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh
cmake/modules/: FindAccountsFileDir.cmake  FindIntltool.cmake
icons/: CMakeLists.txt
plugins/: CMakeLists.txt  cloudurls.h
plugins/mastodon-ui/: CMakeLists.txt  mastodon.cpp  mastodon.h  mastodoncontroller.cpp  mastodoncontroller.h
plugins/mastodon-ui/package/: metadata.desktop
plugins/mastodon-ui/package/contents/ui/: main.qml
plugins/nextcloud-ui/: CMakeLists.txt  nextcloud.cpp  nextcloud.h  nextcloudcontroller.cpp  nextcloudcontroller.h  qmlhelper.cpp  qmlhelper.h
plugins/nextcloud-ui/package/: metadata.desktop
plugins/nextcloud-ui/package/contents/ui/: Server.qml  Services.qml  WebLogin.qml  main.qml
plugins/owncloud-ui/: CMakeLists.txt  owncloud.cpp  owncloud.h  owncloudcontroller.cpp  owncloudcontroller.h  qmlhelper.cpp  qmlhelper.h
plugins/owncloud-ui/package/: metadata.desktop
plugins/owncloud-ui/package/contents/ui/: BasicInfo.qml  Server.qml  Services.qml  main.qml
po/ar/: kaccounts-providers.po
po/ast/: kaccounts-providers.po
po/az/: kaccounts-providers.po
po/bg/: kaccounts-providers.po
po/bs/: kaccounts-providers.po
po/ca/: kaccounts-providers.po
po/ca@valencia/: kaccounts-providers.po
po/cs/: kaccounts-providers.po
po/da/: kaccounts-providers.po
po/de/: kaccounts-providers.po
po/el/: kaccounts-providers.po
po/en_GB/: kaccounts-providers.po
po/eo/: kaccounts-providers.po
po/es/: kaccounts-providers.po
po/et/: kaccounts-providers.po
po/eu/: kaccounts-providers.po
po/fi/: kaccounts-providers.po
po/fr/: kaccounts-providers.po
po/ga/: kaccounts-providers.po
po/gl/: kaccounts-providers.po
po/he/: kaccounts-providers.po
po/hi/: kaccounts-providers.po
po/hu/: kaccounts-providers.po
po/ia/: kaccounts-providers.po
po/id/: kaccounts-providers.po
po/is/: kaccounts-providers.po
po/it/: kaccounts-providers.po
po/ja/: kaccounts-providers.po
po/ka/: kaccounts-providers.po
po/ko/: kaccounts-providers.po
po/lt/: kaccounts-providers.po
po/lv/: kaccounts-providers.po
po/nl/: kaccounts-providers.po
po/nn/: kaccounts-providers.po
po/pa/: kaccounts-providers.po
po/pl/: kaccounts-providers.po
po/pt/: kaccounts-providers.po
po/pt_BR/: kaccounts-providers.po
po/ro/: kaccounts-providers.po
po/ru/: kaccounts-providers.po
po/sa/: kaccounts-providers.po
po/sk/: kaccounts-providers.po
po/sl/: kaccounts-providers.po
po/sr/: kaccounts-providers.po
po/sr@ijekavian/: kaccounts-providers.po
po/sr@ijekavianlatin/: kaccounts-providers.po
po/sr@latin/: kaccounts-providers.po
po/sv/: kaccounts-providers.po
po/ta/: kaccounts-providers.po
po/tr/: kaccounts-providers.po
po/uk/: kaccounts-providers.po
po/zh_CN/: kaccounts-providers.po
po/zh_TW/: kaccounts-providers.po
providers/: CMakeLists.txt  dropbox.provider.in  facebook.provider  facebook.provider.in  google.provider  google.provider.in  identica.provider  kde-owncloud.provider.in  ktp-haze-icq.provider.in  ktp-jabber.provider  ktp-jabber.provider.in  ktp-kde-talk.provider.in  makeplaylive.provider  mastodon.provider.in  nextcloud.provider.in  owncloud.provider  owncloud.provider.in  runnersid.provider  twitter.provider  twitter.provider.in
providers/disabled/: facebook.provider.in  identica.provider.in  owncloud.provider.in  runnersid.provider.in  twitter.provider.in
services/: CMakeLists.txt  accounts-service.its  facebook-contacts.service  facebook-contacts.service.in  facebook-events.service  facebook-feed.service  facebook-feed.service.in  facebook-im.service  facebook-im.service.in  facebook-notes.service  facebook-notes.service.in  facebook-notifications.service  google-calendar.service  google-calendar.service.in  google-contacts.service  google-contacts.service_.in  google-im.service  google-im.service.in  google-todo.service  identica-microblog.service  identica-microblog.service.in  ktp-jabber-im.service  ktp-jabber-im.service.in  makeplaylive-bodega.service  nextcloud-contacts.service.in  nextcloud-storage.service.in  owncloud-calendar.service  owncloud-contacts.service  owncloud-contacts.service.in  owncloud-storage.service  owncloud-storage.service.in  runners-calendar.service  runners-contacts.service  runners-music.service  runners-storage.service  runners-storage.service.in  twitter-microblog.service
services/disabled/: facebook-contacts.service.in  facebook-events.service.in  facebook-feed.service.in  facebook-notes.service.in  facebook-notifications.service.in  google-calendar.service.in  google-contacts.service.in  identica-microblog.service.in  owncloud-calendar.service.in  owncloud-contacts.service.in  runners-calendar.service.in  runners-contacts.service.in  runners-music.service.in  runners-storage.service.in  twitter-microblog.service.in
webkit-options/: CMakeLists.txt  accounts.google.com.conf  api.twitter.com.conf  identi.ca.conf  www.facebook.com.conf
