install(FILES twitter-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES identica-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES makeplaylive-bodega.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES runners-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES runners-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES runners-music.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES runners-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-events.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-feed.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-notes.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-notifications.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
install(FILES facebook-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
