set(WEBKIT_CONFIG_DESTINATION ${KDE_INSTALL_FULL_SYSCONFDIR}/signon-ui/webkit-options.d/)
install(FILES www.facebook.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
install(FILES accounts.google.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
install(FILES api.twitter.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
install(FILES identi.ca.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
